# luke-teleprompter

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts  worker-configuration.d.ts  打开网页版.command
docs/superpowers/plans/: 2026-07-17-browser-cloud-transcription.md  2026-07-17-streaming-script-follow.md
docs/superpowers/specs/: 2026-07-17-browser-cloud-transcription-design.md
src/: App.test.tsx  App.tsx  styles.css  test-setup.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: files.rs  lib.rs  main.rs  model.rs  permissions.rs  recognition.rs  whisper_web_server.rs
src/components/: BottomControls.tsx  CanvasThemeLayer.tsx  EditorModal.tsx  IconButton.tsx  LiquidGlassController.tsx  MicrophoneTestModal.tsx  MobileOrientationGate.tsx  ModelSetup.tsx  SettingsDrawer.tsx  SpotlightStage3D.tsx  TeleprompterCanvas.tsx  TopBar.tsx
src/lib/: browserSpeech.test.ts  browserSpeech.ts  cloudTranscription.test.ts  cloudTranscription.ts  htmlCanvas.ts  localWhisper.test.ts  localWhisper.ts  matcher.test.ts  matcher.ts  script.test.ts  script.ts  scroll.test.ts  scroll.ts  settingsBounds.ts  storage.test.ts  storage.ts  tauri.ts  types.ts  visualLines.test.ts  visualLines.ts
workers/transcription/: tsconfig.json  wrangler.jsonc
workers/transcription/src/: handler.ts  index.ts
workers/transcription/test/: handler.test.ts
