[package]
name = "luke-teleprompter"
version = "0.1.0"
description = "A bilingual local-first teleprompter for macOS"
authors = ["Luke"]
edition = "2021"

[lib]
name = "luke_teleprompter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "luke-teleprompter"
path = "src/main.rs"

[[bin]]
name = "luke-whisper-web-server"
path = "src/whisper_web_server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
block2 = "0.6"
cpal = "0.17"
futures-util = "0.3"
hex = "0.4"
objc2 = "0.6"
objc2-foundation = "0.3"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
whisper-rs = { version = "0.16", features = ["metal"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true
